[gd_scene load_steps=8 format=3 uid="uid://crdb3c8nssyml"]

[ext_resource type="Script" path="res://Control.gd" id="1_x74eg"]
[ext_resource type="Script" path="res://SpawnerLab3.gd" id="2_30u3a"]
[ext_resource type="Script" path="res://Pointer.gd" id="3_b12ny"]
[ext_resource type="Texture2D" uid="uid://crjya6yo4bnx5" path="res://sprites/pointer.png" id="4_8f2iq"]
[ext_resource type="Script" path="res://Scenes/DropOff.gd" id="5_ahsf6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1uxle"]
size = Vector2(196, 151)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubqdw"]
size = Vector2(6, 12)

[node name="Lab 3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x74eg")

[node name="GestureText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 12.0
offset_right = 98.0
offset_bottom = 52.0

[node name="DropOff" type="Area2D" parent="."]
position = Vector2(800, 550)
collision_layer = 4
collision_mask = 4
script = ExtResource("5_ahsf6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropOff"]
position = Vector2(-89, -66)
shape = SubResource("RectangleShape2D_1uxle")
debug_color = Color(1, 1, 1, 0.419608)

[node name="ColorRect" type="ColorRect" parent="DropOff"]
offset_left = -190.0
offset_top = -142.0
offset_right = 11.0
offset_bottom = 14.0

[node name="TextEdit2" type="TextEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = 21.0
offset_right = 193.0
offset_bottom = 126.0
text = "HELLO"
wrap_mode = 1
autowrap_mode = 1

[node name="BalloonContainer" type="Control" parent="."]
visibility_layer = 2
anchors_preset = 0
offset_left = 44.0
offset_top = 21.0
offset_right = 1152.0
offset_bottom = 640.0
script = ExtResource("2_30u3a")

[node name="Pointer" type="Area2D" parent="."]
position = Vector2(44, 21)
collision_layer = 2
script = ExtResource("3_b12ny")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pointer"]
position = Vector2(47, 43)
shape = SubResource("RectangleShape2D_ubqdw")

[node name="Sprite" type="Sprite2D" parent="Pointer"]
position = Vector2(50, 50)
texture = ExtResource("4_8f2iq")

[node name="ScoreBoard" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 85.0
offset_right = 70.0
offset_bottom = 125.0
text = "Score: 0"

[connection signal="area_entered" from="DropOff" to="DropOff" method="_on_area_entered"]
[connection signal="area_entered" from="Pointer" to="Pointer" method="_on_area_entered"]
[connection signal="area_exited" from="Pointer" to="Pointer" method="_on_area_exited"]
